--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@react-native/typescript-config",
   "compilerOptions": {
-    "jsxImportSource": "@soften/react-native",
+    "jsxImportSource": "@soften/metro",
     "paths": {
       "@/*": [
         "./src/*"
@@ -11,5 +11,6 @@
   "include": [
     "src/**/*",
     "main.tsx",
+    "nativewind-env.d.ts"
   ]
 }
