--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native-stack": "^7.3.26",
-    "@soften/react-native": "file:.yalc/@soften/react-native",
+    "@soften/metro": "^0.0.2",
     "figlet": "^1.8.2",
     "module-resolver": "^1.0.0",
+    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -37,7 +40,9 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "19.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   },
   "engines": {
